output/Truebit_find_validate_p8/foundry_validation/TRUEBIT-001_Bonding-curve_purchase_quote_can_round_d/forge_stdout_attempt2.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x764C64b2A09b09Acb100B80d8c505Aa6a0302EF2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x764C64b2A09b09Acb100B80d8c505Aa6a0302EF2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:24:38:
   |
24 |     address internal constant POOL = 0x764c64b2a09b09acb100b80d8c505aa6a0302ef2;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xf65B5C5104c4faFD4b709d9D60a185eAE063276c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xf65B5C5104c4faFD4b709d9D60a185eAE063276c". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:25:37:
   |
25 |     address internal constant TRU = 0xf65b5c5104c4fafd4b709d9d60a185eae063276c;
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

